[gd_scene load_steps=12 format=3 uid="uid://bd5dtr8w5pv4d"]

[ext_resource type="Script" path="res://scripts/code_page_2.gd" id="1_qftbg"]
[ext_resource type="FontFile" uid="uid://cd0wcggadutaq" path="res://Fonts/quiz_code_pages_font/LibreBaskerville-Bold.ttf" id="2_mg8gl"]
[ext_resource type="FontFile" uid="uid://py8r0bc1bcmb" path="res://Fonts/quiz_code_pages_font/LibreBaskerville-Regular.ttf" id="3_xqei7"]

[sub_resource type="LabelSettings" id="LabelSettings_tu174"]
font = ExtResource("2_mg8gl")
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8g3qe"]
font = ExtResource("2_mg8gl")
font_size = 20
font_color = Color(0, 0.639216, 0.94902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e0svr"]
font = ExtResource("3_xqei7")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_dv4lf"]
font = ExtResource("2_mg8gl")
font_size = 20
font_color = Color(1, 1, 1, 0.25098)

[sub_resource type="Animation" id="Animation_kivbn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../feedback_conatiner/panel_container/panel2/feedback_container/feedback_label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5hlbm"]
resource_name = "text_animation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../feedback_conatiner/panel_container/panel2/feedback_container/feedback_label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xycbe"]
_data = {
"RESET": SubResource("Animation_kivbn"),
"text_animation": SubResource("Animation_5hlbm")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2riv2"]
bg_color = Color(0, 0.639216, 0.94902, 1)

[node name="code_page" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 2.0
offset_right = 3.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qftbg")

[node name="background_color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="code_container" type="VBoxContainer" parent="background_color"]
clip_contents = true
layout_direction = 1
layout_mode = 2
offset_left = 31.0
offset_top = 44.0
offset_right = 851.0
offset_bottom = 597.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="problem_container" type="VBoxContainer" parent="background_color/code_container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="problem_label" type="Label" parent="background_color/code_container/problem_container"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
text = "Write a Python program that performs arithmetic operations
"
label_settings = SubResource("LabelSettings_tu174")

[node name="panel" type="Panel" parent="background_color/code_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="line_num_container" type="HBoxContainer" parent="background_color/code_container/panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 503.0

[node name="line_number" type="Label" parent="background_color/code_container/panel/line_num_container"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.639216, 0.94902, 1)
theme_override_font_sizes/font_size = 19
text = "1

2

3

4"
label_settings = SubResource("LabelSettings_8g3qe")

[node name="code_template_conatiner" type="HBoxContainer" parent="background_color/code_container/panel"]
layout_mode = 0
offset_left = 52.0
offset_top = 20.0
offset_right = 708.0
offset_bottom = 480.0

[node name="code_template_label" type="Label" parent="background_color/code_container/panel/code_template_conatiner"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "num1 = 4

num2 = 8
    
addition = num1                num2
    
subtraction = num1                num2"
label_settings = SubResource("LabelSettings_e0svr")

[node name="player_answer" type="OptionButton" parent="background_color/code_container/panel"]
layout_mode = 2
offset_left = 234.0
offset_top = 135.0
offset_right = 299.0
offset_bottom = 165.0
theme_override_fonts/font = ExtResource("2_mg8gl")
item_count = 4
popup/item_0/text = "-"
popup/item_0/id = 0
popup/item_1/text = "+"
popup/item_1/id = 1
popup/item_2/text = "*"
popup/item_2/id = 2
popup/item_3/text = "%"
popup/item_3/id = 3

[node name="player_answer2" type="OptionButton" parent="background_color/code_container/panel"]
layout_mode = 2
offset_left = 263.0
offset_top = 191.0
offset_right = 330.062
offset_bottom = 222.0
theme_override_fonts/font = ExtResource("2_mg8gl")
item_count = 4
popup/item_0/text = "-"
popup/item_0/id = 0
popup/item_1/text = "+"
popup/item_1/id = 1
popup/item_2/text = "*"
popup/item_2/id = 2
popup/item_3/text = "%"
popup/item_3/id = 3

[node name="feedback_conatiner" type="VBoxContainer" parent="background_color"]
layout_mode = 2
offset_left = 868.0
offset_top = 98.0
offset_right = 1128.0
offset_bottom = 597.0

[node name="panel_container" type="HBoxContainer" parent="background_color/feedback_conatiner"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3

[node name="panel2" type="Panel" parent="background_color/feedback_conatiner/panel_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="feedback_container" type="VBoxContainer" parent="background_color/feedback_conatiner/panel_container/panel2"]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 240.0
offset_bottom = 486.0

[node name="feedback_label" type="Label" parent="background_color/feedback_conatiner/panel_container/panel2/feedback_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.639216, 0.94902, 0.431373)
label_settings = SubResource("LabelSettings_dv4lf")
autowrap_mode = 3

[node name="animation_player" type="AnimationPlayer" parent="background_color/feedback_conatiner/panel_container/panel2/feedback_container"]
root_node = NodePath("../../../../../run_button_conatiner")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_xycbe")
}

[node name="run_button_conatiner" type="VBoxContainer" parent="background_color"]
layout_mode = 2
offset_left = 1014.0
offset_top = 50.0
offset_right = 1122.0
offset_bottom = 90.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.09

[node name="run_button" type="Button" parent="background_color/run_button_conatiner"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_xqei7")
theme_override_styles/normal = SubResource("StyleBoxFlat_2riv2")
text = "Run"

[connection signal="pressed" from="background_color/run_button_conatiner/run_button" to="." method="_on_run_button_pressed"]
